--- a/greenhouse.css
+++ b/greenhouse.css
@@ -2,6 +2,20 @@
 
 body {
   font-family: 'Open Sans', 'system-ui', '-apple-system', 'BlinkMacSystemFont', "Segoe UI", 'Roboto', "Helvetica Neue", 'Arial', "Noto Sans", 'sans-serif', "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 16px;
+}
+
+#wrapper {
+  max-width: 1260px;
+}
+
+h1:not(.app-title) {
+  display: none;
+}
+
+h3 {
+  font-size: 24px !important;
+  margin-top: 3rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -9,10 +23,36 @@ h1, h2, h3, h4, h5, h6 {
   color: #2D2A26;
 }
 
+#board_title {
+  font-size: 30px;
+  padding-top: 120px;
+  margin-top: -55px;
+}
+
 a, .opening a {
   color: #225D38;
 }
 
-p {
+strong {
+  color: #2D2A26;
+}
+
+p, ul, ol {
   color: #6A6A6A;
+  margin-bottom: 1rem;
+  line-height: 1.5;
+}
+
+ul, ol {
+  list-style-type: disc;
+  list-style-position: outside;
+  padding-left: 1.5rem;
+}
+
+li {
+  margin-bottom: .5rem;
+}
+
+#app_body {
+  margin: 0 auto;
 }
